# rom-folderer

./: .gitignore  Makefile  Makefile.am  README.md  clean-autoconf.sh  configure.ac  get-folder-sizes.sh
data/: Data.xlsx  LaunchBox.csv  RG32XX-Knuli.csv  structures.csv  systems.csv
src/: main.py
